--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "POETS"
-uuid = "96df2fbe-54ee-416b-bcba-e6fc22a57c08"
+name = "POETs"
+uuid = "5a671d39-efd4-4f73-b77d-a08726cdc8b7"
 authors = ["Jeffrey Varner <jdv27@cornell.edu>"]
 version = "0.1.0"
